# fridge-compiler

./: Cargo.toml  Dockerfile  README.md  testing.ipynb
.github/workflows/: run-tests.yml
src/: README.md  lib.rs
