[package]
name = "fridge-compiler"
version = "0.1.0"
authors = ["Gus Smith <guscomps@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
z3 = "0.10.0"

# This other version of egg isn't *really* needed right now.
[dependencies.egg]
git = "https://github.com/gussmith23/egg"
branch = "expose-parents"